# FightstickDisplay

./: .gitignore  .travis.yml  DeadzoneScene.py  LICENSE  README.md  appveyor.yml  cleanup.sh  fightstick.py  fightstick.sh  fightstick360.py  fightstick360.sh  fightstickPS4.py  fightstick_hb.py  fightstick_hb.sh  fightstick_hbTRY.py  fightstickps4.py  fightstickps4.sh  gamecontrollerdb.txt  mapping  pyproject.toml  requirements.txt  theme  tox.ini  travis.yml
.github/: FUNDING.yml
.github/workflows/: python-app.yml
.pytest_cache/v/cache/: lastfailed
debian/: changelog  control
glade/: fightstick.glade  fightstick.glade~
images/: layout.json
other resources/: press.py  pressmain.py
pyglet/input/: __init__.py  base.py  directinput.py  evdev.py  gamecontroller.py  gamecontrollerdb.py
pyglet/media/drivers/alsa/: __init__.py  adaptation.py  lib_alsa.py
pyglet/window/: __init__.py
pyglet/window/xlib/: __init__.py
python/: fightstick.py  fightsticktest.py  fightsticktest2.py
simplui/: __init__.py  button.py  checkbox.py  container.py  dialogue.py  flow_layout.py  folding_box.py  frame.py  geometry.py  label.py  layout.py  ninepatch.py  pyglet_utils.py  shape.py  slider.py  text_input.py  theme.py  widget.py
src/: fightstick.py  fightstick_hb.py
theme/: layout.ini  layout.ini.original  layout.json  layout.json.original  layout.json~  layouthb.ini  requirements.txt  theming instructions
theme/menutheme/: theme.json  theme.json~
tools/: gen_controller_db.py
